Fix display on mobile

--- a/www/scss/global.scss
+++ b/www/scss/global.scss
@@ -19,7 +19,6 @@ h1, h2, h3, h4, h5, h6 {
 .main {    
     background: rgba(255,255,255,0.2);
     border-radius: 10px;
-    padding: 1em;
 }
 
 .section {
